Fixed text alignment bug

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ body > p {
 /* Even sections */
 .main > div:nth-child(even) {
     margin-left: auto;
+    text-align: right;
     background-color: #e0f2fe;
 }
 
